tests/ui/higher-rank-trait-bounds/fn-ptr.rs
// revisions: classic next
//[next] compile-flags: -Ztrait-solver=next
//check-pass

fn ice()
where
    for<'w> fn(&'w ()): Fn(&'w ()),
{
}

fn main() {
    ice();
}
